--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: "My Personal Site"
-description: "Welcome to my GitHub Pages site!"
+title: "Yang's personal website"
+description: "!"
+author: "Z. Yang"
 theme: minima
