Grok3 helps me renovate it.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Yang's personal website"
-description: ""
+description: "Personal website of Zhixian Yang, showcasing research and education."
 author: "Z. Yang"
 theme: minima
 
